--- a/src/styles/utils/_normalize.scss
+++ b/src/styles/utils/_normalize.scss
@@ -31,6 +31,12 @@ h6 {
     font-weight: 400;
     line-height: 140%;
   }
+
+  &--medium {
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 140%;
+  }
 }
 
 .extra-large__text {
