--- a/src/styles/utils/_normalize.scss
+++ b/src/styles/utils/_normalize.scss
@@ -67,6 +67,10 @@ h6 {
   color: $neutralN400;
 }
 
+.text-color--neutralN500 {
+  color: $neutralN500;
+}
+
 .text-color--dangerDN500 {
   color: $dangerDN500;
 }
