--- a/src/App.scss
+++ b/src/App.scss
@@ -540,6 +540,7 @@ nav.active {
   }
 
   &__button {
+    margin-left: 10px;
     height: 24px;
     width: 24px;
     background-image: url("./assets/icons/arrow-down_icon--neutralN300.svg");
