--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -10,6 +10,10 @@ $neutralN400: #343A40;
 $neutralN500: #212529;
 $neutralN600: #171A1D;
 
+$primaryP200: #FAD7AE;
+$primaryP300: #F7BB7A;
 $primaryP500: #EF7C2A;
+$primaryP600: #E05C16;
+$primaryP700: #B94615;
 
 $dangerDN500: #FF6060;
