--- a/src/components/ProductsFilter/product-filter.scss
+++ b/src/components/ProductsFilter/product-filter.scss
@@ -1,3 +1,17 @@
 .filters-open__button {
   margin-bottom: 24px;
+  margin-inline:  auto;
+  gap: 8px;
+  width: 100%;
+
+  &::after {
+    content: "";
+    background-image: url("../../assets/icons/filter_button.svg");
+    display: block;
+    width: 24px;
+    height: 24px;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
 }
