--- a/src/pages/ProductDetailsPage/product-details-page.scss
+++ b/src/pages/ProductDetailsPage/product-details-page.scss
@@ -20,8 +20,13 @@
   overflow-x: hidden;
 }
 
-.product-info__item {
-  &-active {
+.product-info__item-handler {
+  color: $neutralN350;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 140%;
+
+  &.selected {
     text-decoration: underline;
     color: $primaryP500;
     font-size: 18px;
@@ -31,7 +36,17 @@
 }
 
 .product-info__scroll-bar {
-  margin-bottom: 27px;
+  margin-bottom: 24px;
   background-color: $neutralN200;
   height: 1px;
+
+  &::after {
+    content: "";
+    display: block;
+    width: 40px;
+    height: 6px;
+    border-radius: 100px;
+    background-color: $primaryP300;
+    transform: translate(0, -50%);
+  }
 }
