implement description block

--- a/src/App.scss
+++ b/src/App.scss
@@ -115,7 +115,7 @@ nav.active {
 .cart-page__link {
   width: 44px;
   height: 44px;
-  background-image: url('./assets/icons/cart_icon.svg');
+  background-image: url('./assets/icons/cart_icon-black.svg');
   opacity: 0.6;
 
   &:hover {
