implement questions section

--- a/src/components/ProductsSlider/product-slider.scss
+++ b/src/components/ProductsSlider/product-slider.scss
@@ -1,5 +1,9 @@
 @import '../../styles/utils/vars.scss';
 
+.products__slider {
+  margin-bottom: 56px;
+}
+
 .slider {
   &__top {
     margin-bottom: 24px;
