--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -3,3 +3,7 @@
   background-position: center;
   background-repeat: no-repeat;
 }
+
+.cart__icon {
+  background-image: url('../../assets/icons/cart_icon.svg');
+}
