--- a/src/components/ProductsSlider/product-slider.scss
+++ b/src/components/ProductsSlider/product-slider.scss
@@ -30,20 +30,19 @@
   }
 
   &__screen {
-    display: flex;
     margin: 0 auto;
-    height: 510px;
-    width: 322px;
+    width: 288px;
     overflow: hidden;
   }
 
   &__list {
+    width: max-content;
     display: flex;
     gap: 16px;
   }
 
   &__item {
-    width: 322px;
+    width: 288px;
 
     &.item__code {
       text-align: end;
