--- a/src/pages/ProductDetailsPage/product-details-page.scss
+++ b/src/pages/ProductDetailsPage/product-details-page.scss
@@ -13,6 +13,7 @@
 }
 
 .product-info__nav-list {
+  position: relative;
   padding-bottom: 15px;
   display: flex;
   gap: 24px;
@@ -36,17 +37,18 @@
 }
 
 .product-info__scroll-bar {
+  position: relative;
   margin-bottom: 24px;
   background-color: $neutralN200;
   height: 1px;
+}
 
-  &::after {
-    content: "";
-    display: block;
-    width: 40px;
-    height: 6px;
-    border-radius: 100px;
-    background-color: $primaryP300;
-    transform: translate(0, -50%);
-  }
+.product-info__toddler {
+  position: absolute;
+  top: -3px;
+  //left: calc(100% - 40px);
+  width: 40px;
+  height: 6px;
+  border-radius: 100px;
+  background-color: $primaryP300;
 }
