--- a/src/components/DescriptionInfoBlock/description-info-block.scss
+++ b/src/components/DescriptionInfoBlock/description-info-block.scss
@@ -1,7 +1,4 @@
 .description{
-  &__info-block {
-    margin-bottom: 64px;
-  }
   &__block-title {
     margin-bottom: 16px;
     text-transform: uppercase;
@@ -18,4 +15,20 @@
 
 .advantage__item {
   margin-left: 10px;
+}
+
+.description-clipped {
+  position: relative;
+  height: 200px;
+  overflow-y: hidden;
+
+  &::after {
+    position: absolute;
+    bottom: 0;
+    content: "";
+    display: block;
+    width: 100%;
+    height: 20px;
+    background-image: linear-gradient(#ffffff82, #ffffffd9, #ffffff);
+  }
 }
