--- a/src/components/ProductsSlider/product-slider.scss
+++ b/src/components/ProductsSlider/product-slider.scss
@@ -1,6 +1,7 @@
 @import '../../styles/utils/_vars';
 
 .products-slider__screen {
+  margin-inline: auto;
   overflow: hidden;
   width: 288px;
   height: 479px;
