--- a/src/pages/HomePage/home-page.scss
+++ b/src/pages/HomePage/home-page.scss
@@ -58,6 +58,7 @@
 .categories__list {
   padding-inline: 16px;
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 16px;
 }
@@ -159,6 +160,7 @@
 .product-types__list {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 64px;
   padding-top: 32px;
   padding-bottom: 104px;
